fixed spacing

--- a/style.css
+++ b/style.css
@@ -94,6 +94,6 @@ body {
 		align-items: center;
 	}
 	.contact i {
-		margin-left: 0;
+		padding-left: 0;
 	}
 }
